@@ -10,6 +10,9 @@ What's New in Python 3.4.0 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #1545463: Global variables caught in reference cycles are now
+  garbage-collected at shutdown.
+
 - Issue #17094: Clear stale thread states after fork().  Note that this
   is a potentially disruptive change since it may release some system
   resources which would otherwise remain perpetually alive (e.g. database
